Added more functions to make program work

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,10 @@
     "    while x:   \n",
     "        try:\n",
     "            driver1, driver2 = pull_driver_times(db,i)\n",
-    "            year_fastest.append(min(driver_fastest_lap(driver1,driver2)))\n",
+    "            try:\n",
+    "                year_fastest.append(min(driver_fastest_lap(driver1,driver2)))\n",
+    "            except TypeError:\n",
+    "                pass\n",
     "            i+=1\n",
     "            c+=1\n",
     "        except KeyError:\n",
@@ -207,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -644,47 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  constructorId                                                url  \\\n",
-      "0          alfa  http://en.wikipedia.org/wiki/Alfa_Romeo_in_For...   \n",
-      "1    alphatauri   http://en.wikipedia.org/wiki/Scuderia_AlphaTauri   \n",
-      "2        alpine        http://en.wikipedia.org/wiki/Alpine_F1_Team   \n",
-      "3  aston_martin  http://en.wikipedia.org/wiki/Aston_Martin_in_F...   \n",
-      "4       ferrari      http://en.wikipedia.org/wiki/Scuderia_Ferrari   \n",
-      "5          haas          http://en.wikipedia.org/wiki/Haas_F1_Team   \n",
-      "6       mclaren               http://en.wikipedia.org/wiki/McLaren   \n",
-      "7      mercedes  http://en.wikipedia.org/wiki/Mercedes-Benz_in_...   \n",
-      "8      red_bull       http://en.wikipedia.org/wiki/Red_Bull_Racing   \n",
-      "9      williams  http://en.wikipedia.org/wiki/Williams_Grand_Pr...   \n",
-      "\n",
-      "             name nationality  \n",
-      "0      Alfa Romeo       Swiss  \n",
-      "1      AlphaTauri     Italian  \n",
-      "2  Alpine F1 Team      French  \n",
-      "3    Aston Martin     British  \n",
-      "4         Ferrari     Italian  \n",
-      "5    Haas F1 Team    American  \n",
-      "6         McLaren     British  \n",
-      "7        Mercedes      German  \n",
-      "8        Red Bull    Austrian  \n",
-      "9        Williams     British  \n"
-     ]
-    }
-   ],
-   "source": [
-    "constructors_2022 = create_constructor_year_list(2022)\n",
-    "print(constructors_2022)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -692,12 +655,118 @@
      "output_type": "stream",
      "text": [
       "['alfa' 'alphatauri' 'alpine' 'aston_martin' 'ferrari' 'haas' 'mclaren'\n",
-      " 'mercedes' 'red_bull' 'williams']\n"
+      " 'mercedes' 'red_bull' 'williams']\n",
+      "[91.56, 89.183, 79.251, 79.73, 89.475, 79.608, 72.909, 103.777, 84.03, 100.791, 66.319, 93.034, 78.157, 106.085, 71.704]\n",
+      "[91.635, 79.226, 80.474, 89.69, 80.639, 72.797, 102.845, 94.492, 101.68, 66.16, 92.78, 79.24, 105.827, 71.427]\n",
+      "[91.621, 89.068, 78.815, 79.595, 80.638, 72.247, 103.173, 81.944, 101.598, 65.726, 92.552, 77.904, 105.18, 71.605]\n",
+      "[92.777, 90.256, 79.957, 89.996, 80.954, 72.613, 103.091, 94.512, 102.666, 66.847, 93.276, 79.137, 106.256, 71.416]\n",
+      "[90.558, 88.225, 77.868, 78.796, 88.796, 78.75, 71.376, 101.359, 82.096, 99.846, 65.013, 90.872, 77.421, 104.297, 70.363]\n",
+      "[91.461, 89.546, 80.104, 79.902, 90.423, 79.682, 72.921, 104.643, 82.96, 102.159, 65.879, 92.649, 78.825, 106.342, 71.42]\n",
+      "[92.008, 89.651, 78.703, 79.294, 89.634, 80.287, 71.849, 103.398, 83.749, 101.515, 66.33, 92.032, 77.769, 105.603, 71.116]\n",
+      "[91.048, 89.104, 78.825, 80.383, 89.625, 79.393, 72.112, 102.712, 82.891, 100.028, 65.431, 91.765, 77.377, 105.42, 70.648]\n",
+      "[90.681, 88.2, 78.154, 78.793, 88.991, 79.073, 71.629, 101.641, 81.299, 99.129, 64.984, 91.176, 77.703, 103.665, 70.342]\n",
+      "[92.664, 90.492, 80.135, 91.266, 81.645, 73.611, 104.719, 86.858, 101.998, 66.23, 93.307, 79.256, 105.672, 71.695]\n"
      ]
     }
    ],
    "source": [
-    "print(pull_constructor_names(constructors_2022))"
+    "constructors_2022 = create_constructor_year_list(2022)\n",
+    "print(pull_constructor_names(constructors_2022))\n",
+    "for i in pull_constructor_names(constructors_2022):\n",
+    "    print(year_fastest_times(create_db(2022, i)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a pandas DB that takes the year\n",
+    "# uses its postion in the list to  assigns  a track location with the times\n",
+    "\n",
+    "def create_race_year_list(year):\n",
+    "    team_year = year\n",
+    "    url = f\"https://ergast.com/api/f1/{team_year}/races.json\"\n",
+    "    payload = {}\n",
+    "    headers = {}\n",
+    "    response = requests.request(\"GET\", url, headers=headers, data=payload)\n",
+    "    data = json.loads(response.text)\n",
+    "    df = pd.json_normalize(data[\"MRData\"][\"RaceTable\"])\n",
+    "    df = df.Races\n",
+    "    i = 0\n",
+    "    x = True\n",
+    "    race_listt = []\n",
+    "    real_list = []\n",
+    "    while x:\n",
+    "        try:\n",
+    "            g = df[0]\n",
+    "            race_listt.append(g)\n",
+    "            real_list.append(race_listt[0][i][\"Circuit\"][\"circuitId\"])\n",
+    "            i+=1\n",
+    "        except IndexError:\n",
+    "            x = False\n",
+    "    return real_list\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'bahrain': 90.681, 'jeddah': 88.2, 'albert_park': 78.154, 'imola': 78.793, 'miami': 88.991, 'catalunya': 79.073, 'monaco': 71.629, 'baku': 101.641, 'villeneuve': 81.299, 'silverstone': 99.129, 'red_bull_ring': 64.984, 'ricard': 91.176, 'hungaroring': 77.703, 'spa': 103.665, 'zandvoort': 70.342}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_team_dictonary(team,year):\n",
+    "    local_year_list = create_race_year_list(year)\n",
+    "    local_db = create_db(year, team)\n",
+    "    local_db_times = (year_fastest_times(local_db))\n",
+    "\n",
+    "    dictionary = dict(zip(local_year_list, local_db_times))\n",
+    "    return dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alfa {'bahrain': 91.56, 'jeddah': 89.183, 'albert_park': 79.251, 'imola': 79.73, 'miami': 89.475, 'catalunya': 79.608, 'monaco': 72.909, 'baku': 103.777, 'villeneuve': 84.03, 'silverstone': 100.791, 'red_bull_ring': 66.319, 'ricard': 93.034, 'hungaroring': 78.157, 'spa': 106.085, 'zandvoort': 71.704}\n",
+      "alphatauri {'bahrain': 91.635, 'jeddah': 79.226, 'albert_park': 80.474, 'imola': 89.69, 'miami': 80.639, 'catalunya': 72.797, 'monaco': 102.845, 'baku': 94.492, 'villeneuve': 101.68, 'silverstone': 66.16, 'red_bull_ring': 92.78, 'ricard': 79.24, 'hungaroring': 105.827, 'spa': 71.427}\n",
+      "alpine {'bahrain': 91.621, 'jeddah': 89.068, 'albert_park': 78.815, 'imola': 79.595, 'miami': 80.638, 'catalunya': 72.247, 'monaco': 103.173, 'baku': 81.944, 'villeneuve': 101.598, 'silverstone': 65.726, 'red_bull_ring': 92.552, 'ricard': 77.904, 'hungaroring': 105.18, 'spa': 71.605}\n",
+      "aston_martin {'bahrain': 92.777, 'jeddah': 90.256, 'albert_park': 79.957, 'imola': 89.996, 'miami': 80.954, 'catalunya': 72.613, 'monaco': 103.091, 'baku': 94.512, 'villeneuve': 102.666, 'silverstone': 66.847, 'red_bull_ring': 93.276, 'ricard': 79.137, 'hungaroring': 106.256, 'spa': 71.416}\n",
+      "ferrari {'bahrain': 90.558, 'jeddah': 88.225, 'albert_park': 77.868, 'imola': 78.796, 'miami': 88.796, 'catalunya': 78.75, 'monaco': 71.376, 'baku': 101.359, 'villeneuve': 82.096, 'silverstone': 99.846, 'red_bull_ring': 65.013, 'ricard': 90.872, 'hungaroring': 77.421, 'spa': 104.297, 'zandvoort': 70.363}\n",
+      "haas {'bahrain': 91.461, 'jeddah': 89.546, 'albert_park': 80.104, 'imola': 79.902, 'miami': 90.423, 'catalunya': 79.682, 'monaco': 72.921, 'baku': 104.643, 'villeneuve': 82.96, 'silverstone': 102.159, 'red_bull_ring': 65.879, 'ricard': 92.649, 'hungaroring': 78.825, 'spa': 106.342, 'zandvoort': 71.42}\n",
+      "mclaren {'bahrain': 92.008, 'jeddah': 89.651, 'albert_park': 78.703, 'imola': 79.294, 'miami': 89.634, 'catalunya': 80.287, 'monaco': 71.849, 'baku': 103.398, 'villeneuve': 83.749, 'silverstone': 101.515, 'red_bull_ring': 66.33, 'ricard': 92.032, 'hungaroring': 77.769, 'spa': 105.603, 'zandvoort': 71.116}\n",
+      "mercedes {'bahrain': 91.048, 'jeddah': 89.104, 'albert_park': 78.825, 'imola': 80.383, 'miami': 89.625, 'catalunya': 79.393, 'monaco': 72.112, 'baku': 102.712, 'villeneuve': 82.891, 'silverstone': 100.028, 'red_bull_ring': 65.431, 'ricard': 91.765, 'hungaroring': 77.377, 'spa': 105.42, 'zandvoort': 70.648}\n",
+      "red_bull {'bahrain': 90.681, 'jeddah': 88.2, 'albert_park': 78.154, 'imola': 78.793, 'miami': 88.991, 'catalunya': 79.073, 'monaco': 71.629, 'baku': 101.641, 'villeneuve': 81.299, 'silverstone': 99.129, 'red_bull_ring': 64.984, 'ricard': 91.176, 'hungaroring': 77.703, 'spa': 103.665, 'zandvoort': 70.342}\n",
+      "williams {'bahrain': 92.664, 'jeddah': 90.492, 'albert_park': 80.135, 'imola': 91.266, 'miami': 81.645, 'catalunya': 73.611, 'monaco': 104.719, 'baku': 86.858, 'villeneuve': 101.998, 'silverstone': 66.23, 'red_bull_ring': 93.307, 'ricard': 79.256, 'hungaroring': 105.672, 'spa': 71.695}\n"
+     ]
+    }
+   ],
+   "source": [
+    "constructors_2022 = create_constructor_year_list(2022)\n",
+    "for i in pull_constructor_names(constructors_2022):\n",
+    "    print(f\"{i} {(create_team_dictonary(i, 2022))}\")\n",
+    "          "
    ]
   }
  ],
@@ -717,7 +786,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
